Bugfix (kup-grid): content was not centered.

--- a/packages/ketchup/src/components/kup-grid/styles/kup-grid-main.scss
+++ b/packages/ketchup/src/components/kup-grid/styles/kup-grid-main.scss
@@ -36,10 +36,11 @@
     );
 
     .layout-grid__cell {
+      box-sizing: border-box;
       display: flex;
+      justify-content: center;
       margin: 0px;
       width: auto;
-      box-sizing: border-box;
 
       @for $span from 1 through 24 {
         @at-root .layout-grid__cell--span-#{$span} {
